src_c/converter.h

#ifndef CONVERTER_H
#define CONVERTER_H

float celsius_to_kelvin(float value);
float celsius_to_fahrenheit(float value);
float kelvin_to_fahrenheit(float value);
float kelvin_to_celsius(float value);
float fahrenheit_to_kelvin(float value);
float fahrenheit_to_celsius(float value);

#endif /* CONVERTER_H */